--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-PySide2==5.13.2
+bcrypt==3.2.0
+cffi==1.14.6
+cryptography==3.4.7
+paramiko==2.7.2
+pycparser==2.20
+PyNaCl==1.4.0
+PySide2==5.15.2
+shiboken2==5.15.2
+six==1.16.0
